Browse page display fixes including overlap of menu bar with content, adjusting search input, page spacing and overlap with footer bar.

--- a/app/assets/stylesheets/nav_bar.css.scss
+++ b/app/assets/stylesheets/nav_bar.css.scss
@@ -61,6 +61,7 @@ footer {
     right: 0;
     z-index: 6000;
     margin-top: 3em;
+    clear: both;
 
     a {
       float: right;
